# mellanrum-voice-scout

./: README.md  pyproject.toml
src/voice_scout/: __init__.py  cortex_client.py  main.py  transcriber.py  vad.py
